<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardElevation="10dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/country"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/confirmed_cases"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/reported_deaths"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>